[project]
name = "kamino-risk-dashboard"
version = "0.1.0"
description = "A comprehensive risk dashboard for Kamino lending protocol with real-time analytics and monitoring"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Kamino Risk Team" }
]
keywords = ["kamino", "defi", "risk", "dashboard", "lending", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "streamlit>=1.49.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "web3>=6.0.0",
    "pytz>=2023.3",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "pages"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
